# InterShareSDK

./: .gitignore  Cargo.toml  DataRct.sln  InterShareSdk.sln  Package.swift  generate-csharp.ps1  generate-csharp.sh  generate-swift.sh  setup.ps1  setup.sh
.github/workflows/: ci.yml  deploy.yml
bindings/csharp/: DataRct.sln
bindings/csharp/DataRct/: DataRCT.cs
bindings/csharp/InterShareSdk/: InterShareSDK.cs  InterShareSdk.csproj
bindings/csharp/Tests/: DiscoveryTests.cs  NearbyServerTests.cs  Tests.csproj
bindings/kotlin/: settings.gradle
bindings/kotlin/InterShareSDK/: build.gradle
bindings/swift/: .gitignore  README.md
bindings/swift/Sources/InterShareKit/: InterShareSDK.swift  NearbyServer.swift
bindings/swift/Tests/DataRCTTests/: DataRCTTests.swift
src/intershare_sdk/: Cargo.toml
src/intershare_sdk/src/: connection_request.rs  discovery.rs  encryption.rs  errors.rs  lib.rs  nearby.rs  zip.rs
src/intershare_sdk/tests/: discovery.rs  encryption.rs  helper.rs  transmission.rs
src/intershare_sdk_ffi/: Cargo.toml  build.rs  uniffi.toml
src/intershare_sdk_ffi/src/: async_code.rs  intershare_sdk.udl  intershare_sdk_sync.udl  lib.rs  sync_code.rs
src/intershare_windows/: Cargo.toml  uniffi.toml
src/intershare_windows/src/: discovery.rs  intershare_sdk.udl  intershare_sdk_sync.udl  lib.rs  nearby_server.rs
src/intershare_windows/src/ble/: ble_client.rs  ble_server.rs  mod.rs
src/intershare_windows/tests/: discovery.rs  nearby.rs
src/protocol/: Cargo.toml
src/protocol/src/: communication.proto  discovery.proto  lib.rs
(+10 files in other folders)
